--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -89,7 +89,7 @@ video {
 body,
 html {
     height: 100%;
-    background-color: #000;
+    background-color: #FFF;
     overflow:hidden;
 }
 article,
@@ -192,13 +192,12 @@ input {
 }
 #nameplate
 {
-    padding-top: 30px;
+   
     position: absolute;
-    top: 50%;
+    top: 0;
     left: 0;
-    margin-top: -100px;
-    bottom: 0;
-    right: 0;
+    width: 100%;
+    height: 100% !important;
     
     transition: -webkit-transform .8s ease-out;
     transition: transform .8s ease-out;
@@ -344,8 +343,8 @@ button.big {
     height:200px; 
 }
 #root.mode-dark {
-    background: #000;
-    color: #fff;
+    background: #fff;
+    color: #000;
 }
 #root.mode-light {
     color: rgba(0, 0, 0, .8)
@@ -508,10 +507,10 @@ footer {
     height: 2.25rem;
     text-align: center;
     border-top: 1px solid rgba(255, 255, 255, .2);
-    background: #000;
+    background: #fff;
     text-transform: uppercase;
     font-size: .75rem;
-    color:#fff;
+    color:#000;
     font-weight: bolder;
     overflow: hidden;
     -webkit-transition: all 0.5s ease-in-out;
@@ -519,10 +518,53 @@ footer {
   -o-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
+.simhabtn
+{
+    margin-top: 10px;
+    position: relative;
+    display: block;
+    background: #fff;
+    border: 2px solid #D673F6;
+    color: #000;
+    font-size: 10px;
+    letter-spacing: 0px;
+    width: 150px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 5px;
+}
+.simhabtn:hover
+{
+    background: #D673F6;
+    color: #fff;
+}
+.simha
+{
+    background: url('../img/simha.png');
+    position: relative;
+    background-size: 160px 160px;
+    height: 160px;
+    width: 160px;
+    
+    left: calc(50% - 80px);
+    vertical-align: middle;
+    
 
+}
+/*.simha::after
+{
+    position: absolute;
+    left: 0;
+    color: #000;
+    top:100%;
+    text-align: center;
+    content: 'Ganesh Raghavendran';
+}*/
 footer p
 {
-    color: #fff;
+    color: #000;
 }
 footer:hover
 {
@@ -563,7 +605,7 @@ footer div {
 }
 footer p a
 {
-	color:#0DF5E7;
+	color:#ff0000;
 }
 footer div.secondary {
     width: 10%
@@ -646,12 +688,48 @@ footer div.featured {
     z-index:99990;
 }
 .blink {
-    -webkit-animation: blinker 1s linear infinite;; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: blinker 1s linear infinite;; /* Firefox < 16 */
-        -ms-animation: blinker 1s linear infinite;; /* Internet Explorer */
-         -o-animation: blinker 1s linear infinite;; /* Opera < 12.1 */
+    -webkit-animation: blinker 1s linear infinite; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: blinker 1s linear infinite; /* Firefox < 16 */
+        -ms-animation: blinker 1s linear infinite; /* Internet Explorer */
+         -o-animation: blinker 1s linear infinite; /* Opera < 12.1 */
            
   animation: blinker 1s linear infinite;
+}
+
+
+.simhablink {
+    -webkit-animation: simhaeye 1s linear infinite; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: simhaeye 1s linear infinite; /* Firefox < 16 */
+        -ms-animation: simhaeye 1s linear infinite; /* Internet Explorer */
+         -o-animation: simhaeye 1s linear infinite; /* Opera < 12.1 */
+           
+  animation: simhaeye 1s linear infinite;
+}
+
+@keyframes simhaeye {  
+  20% { background:url('../img/simhaclosed.png');background-size: 160px 160px; } 
+  40% { background:url('../img/simha.png');background-size: 160px 160px; }
+}
+@-moz-keyframes simhaeye {  
+  20% { background:url('../img/simhaclosed.png');background-size: 160px 160px; } 
+  40% { background:url('../img/simha.png');background-size: 160px 160px; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes simhaeye {  
+  20% { background:url('../img/simhaclosed.png');background-size: 160px 160px; } 
+  40% { background:url('../img/simha.png');background-size: 160px 160px; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes simhaeye {  
+  20% { background:url('../img/simhaclosed.png');background-size: 160px 160px; } 
+  40% { background:url('../img/simha.png');background-size: 160px 160px; }
+}
+/* Opera < 12.1 */
+@-o-keyframes simhaeye {  
+  20% { background:url('../img/simhaclosed.png');background-size: 160px 160px; } 
+  40% { background:url('../img/simha.png');background-size: 160px 160px; }
 }
 
 @keyframes blinker {  
